<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="@color/light_blue">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/rider_name"
        android:textColor="@color/text_primary"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="start|center_vertical" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/zone"
        android:textColor="@color/text_primary"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:text="@string/orders"
        android:textColor="@color/text_primary"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        android:text="@string/status"
        android:textColor="@color/text_primary"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center" />

</LinearLayout>