<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.xeta.mws.care.ui.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_scanner"
            app:destination="@id/scannerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/scannerFragment"
        android:name="com.xeta.mws.care.ui.ScannerFragment"
        android:label="@string/scan_rider_area"
        tools:layout="@layout/fragment_scanner">

        <action
            android:id="@+id/action_scanner_to_details"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.xeta.mws.care.ui.DetailsFragment"
        android:label="@string/details_identified"
        tools:layout="@layout/fragment_details">

        <argument
            android:name="scannedImagePath"
            app:argType="string"
            app:nullable="true" />

    </fragment>

</navigation>